<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiTime"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:hint="Time (xx:yy) (24h)"
        app:layout_constraintEnd_toStartOf="@+id/tiSpotsTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiSpotsTotal"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:hint="Total Spots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tiTime"
        app:layout_constraintTop_toBottomOf="@id/tiDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiEventName"
        android:layout_width="341dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Event Name"
        app:layout_constraintBottom_toTopOf="@+id/tiCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiCategories"
        android:layout_width="341dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="Event Categories (please enter all that apply, separated by commas)"
        app:layout_constraintBottom_toTopOf="@+id/tiDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEventName" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiDescription"
        android:layout_width="341dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="250dp"
        android:hint="Please add an event description"
        app:layout_constraintBottom_toTopOf="@id/btnCreateEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiCategories" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:text="CREATE EVENT!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPickDate" />

    <EditText
        android:id="@+id/tiLocation"
        android:layout_width="154dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="110dp"
        android:hint="Your location"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiSpotsTotal" />

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="10dp"
        android:text="Pick Date"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateEvent"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tiLocation" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="74dp"
        android:text="Your Date:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPickDate"
        app:layout_constraintTop_toBottomOf="@+id/tiLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>