...
        android:id="@+id/btnCreateEvent"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_below="@+id/btnblank"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:text="Create Event"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btnBrowseEvent"
        android:layout_width="match_parent"
        android:layout_height="187dp"
...
