...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PendingEvent">


    <TextView
        android:id="@+id/tvCName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="24dp"
...
